kubedefs/rmqservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: vprormq
spec:
   ports:
    - port: 5672
      targetPort: vprormq-port
      protocol: TCP
   selector:
       app: vprormq
   type: ClusterIP
